 cnp-mysql-stig-v-235146-d1p2zaj.yaml
---
# https://www.stigviewer.com/stig/oracle_mysql_8.0/2021-12-10/finding/V-235146

apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mysql-stig-v-235146-3ufbwac
  namespace: kube-system
spec:
  description: "Restrict access to unused ports"
  endpointSelector:
    matchLabels:
      controller-revision-hash: 7b445dc7b4
      k8s-app: cilium
      pod-template-generation: 1
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "3306"
        - ports:
            - port: "33060"
